subprojects/swen430/src/test/resources/tests/valid/ListAccess_Valid_5.while
int|null f([int|null] l) {
    return l[0];
}

void main() {
    print f([5, null]);
}
