subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_16.while
int f(int i) {
    return xs[i];
}
